[package]
name = "builder_client"
version = "0.1.0"
edition = "2021"
authors = ["Sean Anderson <sean@sigmaprime.io>"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "stream",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

lighthouse_version = { path = "../common/lighthouse_version" }
eth2 = { path = "../common/eth2" }
sensitive_url = { path = "../common/sensitive_url" }
