[package]
name = "lighthouse_network"
version = "0.2.0"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = "2021"

[dependencies]
discv5 = { version = "0.3", features = ["libp2p"] }
unsigned-varint = { version = "0.6", features = ["codec"] }
ssz_types = "0.5"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
ethereum_ssz = "0.5"
ethereum_ssz_derive = "0.5"
tree_hash = "0.5"
tree_hash_derive = "0.5"
slog = { version = "2", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
error-chain = "0.12"
dirs = "3"
fnv = "1"
lazy_static = "1"

smallvec = "1"
tokio-io-timeout = "1"
lru = "0.7"

parking_lot = "0.12"
sha2 = "0.9"
snap = "1"
hex = "0.4"
tokio-util = { version = "0.6", features = ["codec", "compat", "time"] }
tiny-keccak = "2"
rand = "0.8"
regex = "1"
strum = { version = "0.24", features = ["derive"] }
superstruct = "0.6"
prometheus-client = "0.21.0"
delay_map = "0.3"
void = "1"
libp2p-quic = { version = "0.9.2", features = ["tokio"] }
libp2p-mplex = "0.40.0"

lighthouse_version = { path = "../../common/lighthouse_version" }
lighthouse_metrics = { path = "../../common/lighthouse_metrics" }
lru_cache = { path = "../../common/lru_cache" }
task_executor = { path = "../../common/task_executor" }
directory = { path = "../../common/directory" }
unused_port = { path = "../../common/unused_port" }
types = { path = "../../consensus/types" }

[dependencies.libp2p]
version = "0.52"
default-features = false
features = [
    "identify",
    "yamux",
    "noise",
    "gossipsub",
    "dns",
    "tcp",
    "tokio",
    "plaintext",
    "secp256k1",
    "macros",
    "ecdsa",
]

[dev-dependencies]
slog-term = "2"
slog-async = "2"
tempfile = "3"
exit-future = "0.2"
quickcheck = "1"
quickcheck_macros = "1"

[features]
libp2p-websocket = []
