[package]
name = "clap_utils"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
hex = "0.4"
dirs = "3"
eth2_network_config = { path = "../eth2_network_config" }
ethereum_ssz = "0.5"
ethereum-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
types = { path = "../../consensus/types" }
