[package]
name = "deposit_contract"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"

build = "build.rs"

[build-dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "stream",
    "rustls-tls",
] }
serde_json = "1"
sha2 = "0.9"
hex = "0.4"

[dependencies]
types = { path = "../../consensus/types" }
ethereum_ssz = "0.5"
tree_hash = "0.5"
ethabi = "16.0.0"
