[package]
name = "eth2_network_config"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"

build = "build.rs"

[build-dependencies]
zip = "0.6"
eth2_config = { path = "../eth2_config" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[dependencies]
serde_yaml = "0.8"
types = { path = "../../consensus/types" }
ethereum_ssz = "0.5"
eth2_config = { path = "../eth2_config" }
discv5 = { version = "0.3", features = ["libp2p"] }
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "stream",
    "rustls-tls",
] }
pretty_reqwest_error = { path = "../pretty_reqwest_error" }
sha2 = "0.9"
url = "2"
sensitive_url = { path = "../sensitive_url" }
slog = { version = "2", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
logging = { path = "../logging" }
bytes = "1"
