[package]
name = "logging"
version = "0.2.0"
authors = ["blacktemplar <blacktemplar@a1.net>"]
edition = "2021"

[features]
test_logger = [
] # Print log output to stderr when running tests instead of dropping it

[dependencies]
slog = { version = "2", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
slog-term = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
lighthouse_metrics = { path = "../lighthouse_metrics" }
lazy_static = "1"
sloggers = { version = "2", features = ["json"] }
slog-async = "2"
take_mut = "0.2.2"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
