[package]
name = "fork_choice"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
state_processing = { path = "../state_processing" }
proto_array = { path = "../proto_array" }
ethereum_ssz = "0.5"
ethereum_ssz_derive = "0.5"
slog = { version = "2", features = [
    "max_level_trace",
    "release_max_level_trace",
] }

# [dev-dependencies]
# beacon_chain = { workspace = true }
# store = { workspace = true }
# tokio = { workspace = true }
