[package]
name = "merkle_proof"
version = "0.2.0"
authors = ["Michael Sproul <michael@sigmaprime.io>"]
edition = "2021"

[dependencies]
ethereum-types = "0.14"
ethereum_hashing = "1.0.0-beta.2"
lazy_static = "1"
safe_arith = { path = "../safe_arith" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
arbitrary = ["ethereum-types/arbitrary"]
