[package]
name = "state_processing"
version = "0.2.0"
authors = [
  "Paul Hauner <paul@paulhauner.com>",
  "Michael Sproul <michael@sigmaprime.io>",
]
edition = "2021"

# [dev-dependencies]
# env_logger = { workspace = true }
# beacon_chain = { workspace = true }
# tokio = { workspace = true }

[dependencies]
bls = { path = "../../crypto/bls" }
integer-sqrt = "0.1.5"
itertools = "0.10"
ethereum_ssz = "0.5"
ethereum_ssz_derive = "0.5"
ssz_types = "0.5"
merkle_proof = { path = "../merkle_proof" }
safe_arith = { path = "../safe_arith" }
tree_hash = "0.5"
types = { path = "../types" }
rayon = "1.7"
ethereum_hashing = "1.0.0-beta.2"
int_to_bytes = { path = "../int_to_bytes" }
smallvec = "1"
arbitrary = { version = "1", features = ["derive"] }
lighthouse_metrics = { path = "../../common/lighthouse_metrics" }
lazy_static = "1"
derivative = "2"

[features]
default = ["legacy-arith"]
fake_crypto = ["bls/fake_crypto"]
legacy-arith = ["types/legacy-arith"]
arbitrary-fuzz = [
  "types/arbitrary-fuzz",
  "merkle_proof/arbitrary",
  "ethereum_ssz/arbitrary",
  "ssz_types/arbitrary",
  "tree_hash/arbitrary",
]
