[package]
name = "bls"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"

[dependencies]
ethereum_ssz = "0.5"
tree_hash = "0.5"
milagro_bls = { git = "https://github.com/sigp/milagro_bls", tag = "v1.5.1", optional = true }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.116"
ethereum_serde_utils = "0.5"
hex = "0.4"
ethereum-types = "0.14"
ethereum_hashing = "1.0.0-beta.2"
arbitrary = { version = "1", features = ["derive"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
blst = { version = "0.3.3", optional = true }

[features]
arbitrary = []
default = ["supranational"]
fake_crypto = []
milagro = ["milagro_bls"]
supranational = ["blst"]
supranational-portable = ["supranational", "blst/portable"]
supranational-force-adx = ["supranational", "blst/force-adx"]
