[package]
name = "slashing_protection"
version = "0.1.0"
authors = [
    "Michael Sproul <michael@sigmaprime.io>",
    "pscott <scottpiriou@gmail.com>",
]
edition = "2021"
autotests = false

[[test]]
name = "slashing_protection_tests"
path = "tests/main.rs"

[dependencies]
tempfile = "3"
types = { path = "../../consensus/types" }
rusqlite = { version = "0.28", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.21.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.116"
serde_json = "1"
ethereum_serde_utils = "0.5"
filesystem = { path = "../../common/filesystem" }
arbitrary = { version = "1", features = ["derive"] }

[dev-dependencies]
lazy_static = "1"
rayon = "1.7"

[features]
arbitrary-fuzz = ["types/arbitrary-fuzz"]
